--- a/missed-html-details/index.html
+++ b/missed-html-details/index.html
@@ -13,4 +13,4 @@
 	}
 	details.css ul {
 		margin: 0;
-	}</style><div class="ui segment"><details class="css"><summary>Root</summary><details><summary>Dir</summary><details><summary>file list</summary><ul><li>a</li><li>b</li><li>c</li></ul></details></details></details></div></main><footer>Joe Maddalone</footer><style></style></body></html>
+	}</style><div class="ui segment"><details class="css"><summary>Root</summary><details><summary>Dir</summary><details><summary>file list</summary><ul><li>a</li><li>b</li><li>c</li></ul></details></details></details></div></main><footer class="flex justify-between"><div>I'm Joe Maddalone.</div><div><i>This is not a blog, these pages are changed all the time.</i></div></footer><style></style></body></html>
