--- a/hexadecimal-color/index.html
+++ b/hexadecimal-color/index.html
@@ -126,6 +126,37 @@ text.middle {
 	animation-timing-function: linear;
 }
 
+.home-server-diagram path.node {
+	fill: #ddd;
+}
+
+.home-server-diagram path.node.rr {
+	fill: #ff000080;
+}
+
+.home-server-diagram path.node.bb {
+	fill: #0000ff80;
+}
+
+.home-server-diagram path.node.gg {
+	fill: #00ff0080;
+}
+
+.home-server-diagram {
+	background-color: #fff;
+}
+
+.home-server-diagram text {
+	font-size: 150%;
+	font-weight: 700;
+	fill: #222;
+}
+
+text.middle {
+  dominant-baseline: middle;
+  text-anchor: middle;
+}
+
 .hexadecimal-red-diagram path.node {
 	fill: #ddd;
 }
