--- a/experiments/seam/index.html
+++ b/experiments/seam/index.html
@@ -6,7 +6,7 @@ This is a simple implementation of seam carving. It is not
 The algorithm is based on the paper <a href="https://perso.crans.org/frenoy/matlab2012/seamcarving.pdf">Seam Carving for Content-Aware Image Resizing</a> by Shai Avidan and Ariel Shamir.
 </p> <div style="margin-bottom: 20px;">
 &larr; Back to <a href="/experiments">
-joe.maddalone.com/experiments</a> </div> <button id="carveBtn_100">100%</button> <button id="carveBtn_80">80%</button> <button id="carveBtn_60">60%</button> <button id="carveBtn_40">40%</button> <button id="carveBtn_20">20%</button> <div id="info" style="margin: 10px; font-family: monospace;"></div> <div class="container"></div> </div> <script>
+joemaddalone.com/experiments</a> </div> <button id="carveBtn_100">100%</button> <button id="carveBtn_80">80%</button> <button id="carveBtn_60">60%</button> <button id="carveBtn_40">40%</button> <button id="carveBtn_20">20%</button> <div id="info" style="margin: 10px; font-family: monospace;"></div> <div class="container"></div> </div> <script>
             // Configuration constants
             const CONFIG = {
                 SEAM_HIGHLIGHT_DURATION: 20, // ms
